introduzione di una workflow di build
Questo commit inaugura il repository pubblico sanitizzato. Questi i
cambiamenti significativi:

a) renaming del parent module Maven "Fantacalcio" -> "fantacalcio"

b) introduzione di una GitHub workflow per il build automatico
	la workflow definita in .github/workflows/maven.yml automatizza,
	per tutti gli eventi di direct push e pull request sul repository,
		> la validazione con Maven verify
		> la generazione di report (unit e IT) in caso di failure
	Allo scopo di abilitare il building con Java 17 sono state downgradate
	le properties di maven-compiler-plugin

c) sanitizzazione
	questo repo "sanitizzato" è stato ottenuto a partire dal
	precedente remote privato P attraverso
		> rimozione del sorgente Latex "Title.tex" e sue inclusioni
		> rimozione della direttiva \author

				***

Qui sotto una overview dei passaggi seguiti nel processo di
sanitizzazione e creazione di questo remote pubblico, per reference:

	1) creazione di un backup clone e di un working clone W di P

	2) sanitizzazione di W utilizzando git-filter-repo:

		git-filter-repo
			--path Relazione/Title.tex --invert-paths
			--path Relazione/Title/Title.tex --invert-paths
			--replace-text expressions.txt
			--force

	   dove il file expressions.txt conteneva:

	   	regex:\\include\{Title\/Title\.tex\}==>
		regex:\\include\{Title\/title\.tex\}==>

		regex:\\author\{BA\\\\ CN \\\\ ZN\}==>
		regex:\\author\{CN \\\\ ZN\}==>

	   validando il risultato, ad esempio, con:

	   	git log --all -p -- "**/main.tex" |
	   	grep -E --color=always '(\\author.*)'

	3) mirroring di W su questo remote pubblico

	4) eliminazione nel remote dei branch già merged, con
		git push origin --delete <branch_name>
	   Notiamo che il solo branch unmerged è "splitting_SPS_with_MVP",
	   che non è escluso possa essere eliminato